--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myreactapp",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "https://irecommend-app.herokuapp.com",
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
