--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ beautifulsoup4==4.8.2
 certifi==2019.11.28
 cffi==1.14.0
 chardet==3.0.4
+cloudinary==1.21.1
 colorama==0.4.3
 constantly==15.1.0
 coverage==5.0.3
